--- a/src/patternfly/components/BackToTop/back-to-top.scss
+++ b/src/patternfly/components/BackToTop/back-to-top.scss
@@ -1,6 +1,6 @@
 @use '../../sass-utilities' as *;
 
-:root {
+:where(:root, .#{$back-to-top}) {
   --#{$back-to-top}--Right: var(--pf-t--global--spacer--2xl);
   --#{$back-to-top}--Bottom: var(--pf-t--global--spacer--lg);
   --#{$back-to-top}--md--Bottom: var(--pf-t--global--spacer--2xl);
