--- a/src/patternfly/layouts/Bullseye/bullseye.scss
+++ b/src/patternfly/layouts/Bullseye/bullseye.scss
@@ -1,7 +1,6 @@
 @use '../../sass-utilities' as *;
 
-:where(:root),
-:where(.#{$bullseye}) {
+:where(:root, .#{$bullseye}) {
   --#{$bullseye}--Padding: 0;
 }
 
