--- a/src/patternfly/components/JumpLinks/jump-links.scss
+++ b/src/patternfly/components/JumpLinks/jump-links.scss
@@ -2,8 +2,7 @@
 
 $pf-v6-c-jump-links--m-expandable--breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg", "xl", "2xl");
 
-:where(:root),
-:where(.#{$jump-links}) {
+:where(:root, .#{$jump-links}) {
   // list
   --#{$jump-links}__list--Display: flex;
   --#{$jump-links}__list--PaddingTop: 0;
